# celery-stack

./: .gitignore  Makefile  README.md  docker-compose.yml
app/: Dockerfile  pyproject.toml
app/app/: api.py  main.py  models.py  settings.py  tasks.py
monitoring/prometheus/: prometheus.yml
