[tool.poetry]
name = "app"
version = "0.1.0"
description = "Simple app for experimenting with celery"
authors = ["h5vx <h5v@protonmail.com>"]

[tool.poetry.dependencies]
python = "~3.7.11"
celery = "4.4.5"
flower = "0.9.7"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
redis = "^4.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target_version = ['py37']
exclude='/(\.eggs|\.git|\.hg|\.mypy_cache|\.nox|\.tox|\.venv|\.venv3|\.svn|_build|buck-out|build|dist)/'
